--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2016",      
-    "allowJs": true,     
+    "rootDir": "./src",
     "outDir": "dist",
-    "noImplicitAny": false,
-    "sourceMap": false                      /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    // "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
-    // "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-
-    //  "strict": true,                                      /* Enable all strict type-checking options. */
-    // "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+    }
 }
