--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
     "trailingComma": "es5",
-    "tabWidth": 4,
+    "tabWidth": 2,
     "semi": true,
-    "singleQuote": false,
+    "singleQuote": true,
     "printWidth": 100,
     "bracketSpacing": true,
     "arrowParens": "always"
