--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "dist",
-    "target": "ES6",
+    "target": "es6",
     "module": "es2015"
     }
 }
